# cadre

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
ai-docs/.cadre-log/: smoke-001.log.yaml
ai-docs/archive/keel-era/discovery/: blueprint.md  plan-v2.md
ai-docs/cadre-v01/: blueprint.md
docs/: AGENT-CONTRACT.md  API.md  ARCHITECTURE.md  GETTING-STARTED.md  MANUAL.md  PROVIDERS.md  SKILL-CONTRACT.md  commercial.md
docs/architecture/: 0001-monorepo-layout.md  0002-multi-provider-llm.md  0003-rebrand-and-agentic-pivot.md  0004-agentic-orchestration.md  0005-plugin-manifest.md  0006-context-rollover.md
infra/docker/: compose.yaml  runtime.Dockerfile
plugins/cadre/: README.md  runtime-policy.yaml
plugins/cadre/.claude-plugin/: plugin.json
plugins/cadre/agents/: code-reviewer.md  context-summarizer.md  inception-author.md  orchestrator.md  security-reviewer.md  test-planner.md
plugins/cadre/hooks/: pre-compact.sh  settings-template.json
plugins/cadre/skills/bug-fix/: SKILL.md
plugins/cadre/skills/implement/: SKILL.md
plugins/cadre/skills/resume/: SKILL.md
plugins/cadre/skills/review/: SKILL.md
plugins/cadre/skills/rollover/: SKILL.md
scripts/: smoke-run.py
services/runtime/: README.md  pyproject.toml
services/runtime/cadre/: __init__.py  checkpoint.py  cost_estimators.py  errors.py  policy.py  policy_loader.py  providers.py  runtime.py  sep_log.py  skill_runner.py  specs.py
services/runtime/tests/: test_checkpoint.py  test_context_rollover.py  test_cost_estimators.py  test_policy.py  test_policy_loader.py  test_runtime_budget_and_doom.py  test_runtime_call.py  test_sep_log.py  test_skill_runner.py  test_smoke.py  test_specs.py
